# bitgn-contest-with-claude

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/bench/: 1623b40_20260410T181832Z.json  1af9bd7_usewhen_p3i6_gpt54_prod_runs1.json  1af9bd7_usewhen_p3i6_gpt54_prod_runs1.run_metrics.json  240e198_20260411T095641Z_codex53_newprompt_dev_runs3.json  240e198_20260411T095641Z_codex53_newprompt_dev_runs3.run_metrics.json  29bbca5_norm_smoke_p3i6_prod_runs1.json  (+116 more)
scripts/: arch_report.py  bench_summary.py  bitgn_scraper.py  failure_report.py  intent_report.py  local_bench.py  local_pcm.py  local_test_runner.py  measure_r4_fp.py  scrape_prod_full.py
tests/: test_adapter_dispatch.py  test_adapter_gpt_oss_hooks.py  test_adapter_prepass.py  test_adapter_qwen.py  test_adapter_qwen_remote.py  test_agent_format_validation.py  test_agent_loop.py  test_agent_router_injection.py  test_arch_constants.py  test_arch_log.py  test_arch_report.py  test_backend_base.py  test_backend_openai_compat.py  test_backend_openai_toolcalling.py  test_bench_summary.py  test_classifier.py  test_cli.py  test_cli_resume.py  test_config.py  test_enforcer.py  test_finance_skill.py  test_harness.py  test_harness_gate.py  test_inbox_processing_skill.py  test_inbox_security_update.py  test_lmstudio_watchdog.py  test_mutation_tracking.py  test_orchestrator.py  test_outbox_skill.py  test_pcm_tracing.py  test_prompts.py  test_reactive_router.py  test_resume.py  test_routed_preflight.py  test_router.py  test_schemas.py  test_semaphore.py  test_session.py  test_skill_loader.py  test_task_hints.py  (+6 more)
(+5767 files in other folders)
